@@ -1,4 +1,4 @@
-GNU tar NEWS - User visible changes. 2025-05-06
+GNU tar NEWS - User visible changes. 2025-07-25
 Please send GNU tar bug reports to <bug-tar@gnu.org>
 
 version TBD
@@ -44,6 +44,9 @@ option.
 
 ** Transformations that change case (e.g., --transform='s/.*/\L&/')
    now work correctly with multi-byte characters.
+
+** tar now works better in strict debugging environments that do not
+   allow pointer arithmetic to escape from a sub-element of an array.
 
 * Performance improvements
 
